# Synapse

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  start.ps1  start.sh  synapse
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  wiki.yml
backend/: conftest.py  requirements.txt
backend/app/: keys_api.py  main.py
backend/app/core/: config.py  roots.py  vault_lock.py  vault_transfer.py
backend/modules/distill/: README.md
backend/modules/distill/src/: __init__.py  api.py  providers.py  service.py
backend/modules/graph/: README.md
backend/modules/graph/src/: __init__.py  api.py  models.py  query.py  services.py
backend/modules/ingest/: README.md
backend/modules/ingest/src/: __init__.py  api.py  hooks.py  ignore.py  models.py  services.py
backend/modules/render/: README.md
backend/modules/render/src/: __init__.py  api.py  providers.py  service.py
backend/synapse/: __init__.py  __main__.py  serve.py  wiki.py
backend/tests/: test_api.py  test_serve.py  test_vault_transfer.py  test_wiki.py
backend/tests/fixtures/repo_a/: README.md  hebrew.md
backend/tests/fixtures/repo_b/: beta.md
backend/tests/fixtures/repo_photos/: notes.md
frontend/: dashboard.html  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  dashboard.js  explorer.js  graph.js  main.js  wiki.js
project-management/: 00_INDEX.md  01_ARCHITECTURE.md  03_MODULE_CONTRACTS.md  0k_PRD.md  0l_DECISIONS.md  0m_BACKLOG.md
project-management/marketing/: 00_LAUNCH_WHAT_TO_DO.md
project-management/reference/: 2026-07-16_graphify_learnings.md
project-management/reviews/: 2026-07-16_gbu_inapp_keys.md
project-management/sprints/: 00_index.md
project-management/sprints/sprint_01/: index.md
project-management/sprints/sprint_01/acceptance/: 00_founder_acceptance_script.md
project-management/sprints/sprint_01/reports/: EPIC_A_ingest_report.md  EPIC_B_graph_report.md  SPRINT_01_REPORT.md
project-management/sprints/sprint_01/reviews/: 2026-07-15_gbu_sprint01_close.md  2026-07-15_gbu_sprint01_dev_acceptance.md
project-management/sprints/sprint_01/todo/: EPIC_A_ingest_vault.md  EPIC_B_graph_index.md
project-management/sprints/sprint_02/: index.md
project-management/sprints/sprint_02/acceptance/: 00_founder_acceptance_script.md
project-management/sprints/sprint_02/reports/: EPIC_C_implementation_report.md  SPRINT_02_REPORT.md
project-management/sprints/sprint_02/reviews/: 2026-07-15_design_review_sprint02_explorer.md  2026-07-15_gbu_sprint02_dev_acceptance.md
project-management/sprints/sprint_02/todo/: EPIC_C_explorer.md
project-management/sprints/sprint_03/: index.md
project-management/sprints/sprint_03/acceptance/: 00_founder_acceptance_script.md
project-management/sprints/sprint_03/reports/: SPRINT_03_PROGRESS.md  (+3 more)
project-management/sprints/sprint_04/: index.md
project-management/sprints/sprint_05/: index.md
project-management/ui_kit/explorer/: KIT.md  kit.html
tests/e2e/: README.md  keys_panel.spec.mjs  sprint01_dashboard.spec.mjs  sprint01_wiki_popup.spec.mjs  sprint02_explorer.spec.mjs  sprint03_distill_render.spec.mjs  sprint04_open_brain.spec.mjs  sprint05_assets.spec.mjs  sprint05_ghosts.spec.mjs  sprint05_lens.spec.mjs
(+34 files in other folders)
