# NOTE: the supported install path is `./start.sh setup` (pip + backend/requirements.txt).
# This file carries the project metadata + shared tool config (ruff / black / mypy / pytest).

[tool.poetry]
name = "synapse"
version = "0.1.0"
description = "SYNAPSE — a second brain for your repos: index scattered markdown into a wikilinked knowledge graph; distill any node/subtree with an LLM and render the idea as an image"
authors = ["Avidor Rabinovich <avidor@synaptixlabs.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SynaptixLabs/Synapse"
repository = "https://github.com/SynaptixLabs/Synapse"
keywords = ["second-brain", "knowledge-graph", "markdown", "wiki", "wikilinks", "llm", "anthropic", "gpt-image-1", "fastapi", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
# Mirror of backend/requirements.txt (the canonical dependency list).
# Python 3.11–3.13 only.
python = ">=3.11,<3.14"
fastapi = ">=0.115"
uvicorn = { version = ">=0.30", extras = ["standard"] }
anthropic = ">=0.40"   # Distill provider — imported ONLY in backend/modules/distill
openai = ">=1.50"      # Render provider — imported ONLY in backend/modules/render

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"      # FastAPI TestClient transport
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache", 
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
]
ignore = [
    "S101",  # assert statements (ok in tests)
    "S608",  # SQL injection (false positives)
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend"]   # the Python suite lives under backend/ (tests/ holds the Playwright E2E)
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
# Coverage flags live in CI (backend job runs `pytest --cov` explicitly) so a bare
# `pytest` works on a fresh clone without pytest-cov installed.
addopts = [
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
